fix layout issue for selects

--- a/app/frontend/less/forms.less
+++ b/app/frontend/less/forms.less
@@ -2,6 +2,6 @@
   margin-top: 15px;
 }
 
-.input-group{
+.input-group, .input-select{
   margin-bottom: 10px;
 }
